Bug 192454 [server] http.jetty's SSL support for "needclientauth" and "wantclientauth" cause ClassCastExceptions